Initial commit with Three.js test

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Badis Portfolio</title>
+    <link rel="icon" href="portfolio-icon.png" type="image/png">
+</head>
+<body>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
+
+</body>
+</html>
